@@ -1,5 +1,8 @@
 ChangeLog file for Endian libencloud
 
+libencloud 0.X.Y:
+	- vpn: 'client' wasn't being dumped
+
 libencloud 0.6.1 (15/04/2014):
 	- custom ProxyFactory to avoid proxying localhost requests;
 	  handle global proxy settings in core [CONNECT-106]
